--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,8 @@ html
 	head
 			title Fun test
 			link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
+			link(rel='stylesheet', href='/assets/stye.css')
+
 			script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js')
 			script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js')
 			script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.min.js')
