--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,8 @@
 html
 	head
-			title Fun test
+			title Party!
 			link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
-			link(rel='stylesheet', href='/assets/stye.css')
+			link(rel='stylesheet', href='/style.css')
 
 			script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js')
 			script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js')
@@ -12,7 +12,7 @@ html
 			script(src='Part-aye.js')
 		body(ng-app='PartyApp', ng-controller='PartyCtrl')
 
-			ul
+			ul(id="message-list" class="list-unstyled")
 				li(ng-repeat="m in messages")
 					{{m.Body}}
 
