--- a/views/index.jade
+++ b/views/index.jade
@@ -11,9 +11,11 @@ html
 			script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
 			script(src='Part-aye.js')
 		body(ng-app='PartyApp', ng-controller='PartyCtrl')
+			
+			//- input(type='text' ng-model="search")
 
 			ul(id="message-list" class="list-unstyled")
-				li(ng-repeat="m in messages")
+				li(ng-repeat="m in messages | filter:{Body: search}" class="message")
 					{{m.Body}}
 
 
