--- a/views/index.jade
+++ b/views/index.jade
@@ -1,21 +1,25 @@
 html
 	head
-			title Party!
-			link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
-			link(rel='stylesheet', href='/style.css')
+		title Party!
 
-			script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js')
-			script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js')
-			script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.min.js')
-			script(src='http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js')
-			script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
-			script(src='Part-aye.js')
+		link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/style.css')
+
+
+		script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js')
+		script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js')
+		script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.min.js')
+		script(src='http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js')
+		script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+		script(src='Part-aye.js')
+
+
 		body(ng-app='PartyApp', ng-controller='PartyCtrl')
 			
 			//- input(type='text' ng-model="search")
 
-			ul(id="message-list" class="list-unstyled")
-				li(ng-repeat="m in messages | filter:{Body: search}" class="message")
-					{{m.Body}}
-
+			div(class='row' ng-repeat="m in messages | filter:{Body: search}" class="message")
+				div(class='col-md-8 col-md-offset-2')
+					div(class='message well')
+						{{m.Body}}
 
