--- a/views/index.jade
+++ b/views/index.jade
@@ -17,6 +17,11 @@ html
 		body(ng-app='PartyApp', ng-controller='PartyCtrl')
 			
 			//- input(type='text' ng-model="search")
+			div(class='row')
+				div(class='col-md-8 col-md-offset-2')
+
+					div.phone
+						| Text <insert phone number here>.
 
 			div(class='row' ng-repeat="m in messages | filter:{Body: search}" class="message")
 				div(class='col-md-8 col-md-offset-2')
